2020-08-24  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha15 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha15: Madelines';git push
	git tag -a 4.9.4-alpha15 -m '';git push --tags

	* Informational error message when vertical interpolation horizontal/temporal grids mismatched

	* Start to utilize tpd=0 for monthly mean data thanks to clm_nfo bugfix

2020-08-23  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha14 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha14: Fiscalini';git push
	git tag -a 4.9.4-alpha14 -m 'ncclimo clm_nfo to ncra, deprecate	c2b, add cb_tst.nco;ncremap nni';git push --tags

	* Always define unt_val and cln_val, fix DJF clm_nfo interpretation, results look valid

2020-08-21  Charlie Zender  <zender@uci.edu>

	* Re-write ncra to use unified cb structure based on clm_nfo argument

	* Fix new link error with extern double hav(double x1, double x2)

	* Merge Henry's nearest neighbor distance weighted interpolation algorithm

2020-08-20  Charlie Zender  <zender@uci.edu>

	* Nicefy and commit climatology bounds test script cb_tst.nco

2020-08-19  Charlie Zender  <zender@uci.edu>

	* ncclimo monthly dates good though seasonal and annual climo dates are borken

	* ncclimo annotate seasonal and annual climos with clm_nfo, fix double-free()'s

	* Coordinate and bounds values work well for climatological monthly means

2020-08-18  Charlie Zender  <zender@uci.edu>

	* Merge Henry's nco_clm_nfo_to_tm_bnds() and write nco_clm_nfo_get()

2020-08-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha13 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha13: Kamala & Krall';git push
	git tag -a 4.9.4-alpha13 -m 'nco_xtr_xcl_chk; ncra per-record wgt fix, no cll_mth for bnds; ncrename rgr github;';git push --tags

	* Change regression test to expect new behavior

	* Add nco_xtr_xcl_chk() to die with hint if extraction rules lead to retaining user-excluded variables
