@@ -1,8 +1,13 @@
-2020-08-24  Charlie Zender  <zender@uci.edu>
+2020-08-25  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.9.4-alpha15 release procedure:
 	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha15: Madelines';git push
 	git tag -a 4.9.4-alpha15 -m '';git push --tags
+
+	* nco_vrt_ntp() assign grd_sz_in (from input file) := grd_sz_out (from template file)
+	This fixes vertical interpolation when PS is in vrt_fl, a regression introduced in 4.9.2
+
+2020-08-24  Charlie Zender  <zender@uci.edu>
 
 	* Informational error message when vertical interpolation horizontal/temporal grids mismatched
 
